
Thu Feb 24 15:16:18 CET 2005 Paolo Molaro <lupus@ximian.com>

	* configure.in: add a check for compiler support of the
	tls_model sttribute.

Mon Feb 21 17:14:34 CET 2005 Paolo Molaro <lupus@ximian.com>

	* configure.in: don't imply that enabling ICU support is a good
	thing to do.

2005-02-21  Michal Moskal  <malekith@pld-linux.org>
	    Raja R Harinath  <rharinath@novell.com>

	* configure.in: Emit exec_prefix and libdir into mcs/build/config.make.

2005-02-17  Raja R Harinath  <rharinath@novell.com>

	* runtime/Makefile.am (cur_dir_cmd): New.  Use cygpath to get the
	current directory in non-Cygwin form.
	(PLATFORM_PATH_SEPARATOR): New.  $(PATH_SEPARATOR) has the "wrong"
	value on cygwin. 
	(mcs-compileall): Use them.

2005-02-15  Raja R Harinath  <rharinath@novell.com>

	* scripts/Makefile.am ($(bin_SCRIPTS)): Depend on Makefile, so
	that it picks up any changes in $prefix.
	($(bin2_SCRIPTS)): Likewise.

2005-02-13  Zoltan Varga  <vargaz@freemail.hu>

	* scripts/dtd2xsd: Remove generated file from SVN.

2005-02-12  Cesar Lopez Nataren  <cnataren@novell.com>

	* scripts/Makefile.am (bin_SCRIPTS): added mjs

2005-02-12  Ben Maurer  <bmaurer@ximian.com>

	* runtime/Makefile.am (centum_nunit_tests): Add corlib! Thanks to
	nickd, miguel, et al. 

2005-02-07  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Add -Wdeclaration-after-statement option to CFLAGS if
	gcc supports it to weed out pre ISO C99 code.

2005-02-07  Lluis Sanchez Gual  <lluis@novell.com>

	* data/net_1_1/DefaultWsdlHelpGenerator.aspx:
	* data/net_2_0/DefaultWsdlHelpGenerator.aspx: Don't use databinding where
	not needed.

2005-02-04  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Check for curses.h.

2005-02-04 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: define SOLARIS_CURSES when compiling for *solaris.
	* mono/metadata/console-io.c: <curses.h> is needed by term.h on solaris.

2005-02-04  Raja R Harinath  <rharinath@novell.com>
